# yaml-schema

./: .clocignore  .gitignore  Cargo.toml  README.md  refcell  refcell.rs  yaml-schema.yaml
.github/workflows/: build.yaml  ci-tests.yaml
features/: basics.feature  cli.feature  composition.feature
features/validation/: arrays.feature  booleans.feature  const.feature  enums.feature  nulls.feature  numbers.feature  objects.feature  strings.feature
src/: context.rs  deser.rs  engine.rs  error.rs  lib.rs  literals.rs  loader.rs  schemas.rs  validation.rs
src/engine/: context.rs  validation.rs
src/schemas/: any_of.rs  array.rs  bool_or_typed.rs  boolean.rs  const.rs  enum.rs  integer.rs  not.rs  number.rs  object.rs  one_of.rs  string.rs
src/validation/: any_of.rs  context.rs  not.rs  objects.rs  one_of.rs  strings.rs
tests/: basics.rs  cli.rs
tests/fixtures/: invalid.yaml  schema.yaml  valid.yaml
