[package]
name = "yaml-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
ctor = "0.2.8"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
yaml-rust2 = { version = "0.8.0", path = "../yaml-rust2" }
