[package]
name = "yaml-schema"
version = "0.2.0"
edition = "2021"
description = "A YAML schema validator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
ctor = "0.2.8"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
yaml-rust2 = "0.8.1"

[dev-dependencies]
cucumber = "0.21.0"
tokio = { version = "1.38.0", features = ["full"] }

[[test]]
name = "basics"
harness = false

[[test]]
name = "cli"
harness = false
